Phase - 2/bison.output
Terminals unused in grammar

    LEXERROR


Grammar

    0 $accept: begin $end

    1 all_datatypes: NUDATATYPE
    2              | AUDATATYPE
    3              | NARRUDATATYPE
    4              | AARRUDATATYPE
    5              | NBOOL
    6              | NDEC
    7              | NNUM
    8              | NTEXT
    9              | NLET
   10              | ABOOL
   11              | ADEC
   12              | ALET
   13              | ATEXT
   14              | ANUM
   15              | nonAtomicArray
   16              | atomicArray

   17 expression_op: ASSN_DIV
   18              | ASSN_EXPONENT
   19              | ASSN_MODULO
   20              | ASSN_MUL
   21              | INCR
   22              | DECR

   23 comparison_op: LT
   24              | GT
   25              | GTEQ
   26              | LTEQ
   27              | NOT_EQ
   28              | EQUAL_TWO

   29 arithmetic_op: ADD
   30              | SUB
   31              | MUL
   32              | DIV
   33              | MODULO
   34              | EXPONENT

   35 logical_op: AND
   36           | OR

   37 nonAtomic_datatypes: nonAtomicArray
   38                    | nonAtomicSimple

   39 begin: ε
   40      | startdec begin
   41      | declaration begin
   42      | function begin
   43      | task begin
   44      | type_declaration begin

   45 E: ε
   46  | SQUAREOPEN arr_access SQUARECLOSE

   47 T: IDENTIFIER E
   48  | func_invoke

   49 all_ops: arithmetic_op
   50        | comparison_op
   51        | logical_op
   52        | HASH
   53        | ARROW

   54 constants: INTEGERLITERAL
   55          | CHARACTERLITERAL
   56          | FLOATLITERAL
   57          | BOOLEANLITERAL
   58          | STRINGLITERAL

   59 next: RHS all_ops next
   60     | RHS

   61 RHS: constants
   62    | T
   63    | TID
   64    | get_invoke
   65    | method_invoke
   66    | in_stmt
   67    | ROUNDOPEN RHS all_ops next ROUNDCLOSE
   68    | ROUNDOPEN RHS ROUNDCLOSE
   69    | NEG ROUNDOPEN RHS ROUNDCLOSE

   70 nonAtomicSimple: NNUM
   71                | NDEC
   72                | NBOOL
   73                | NLET
   74                | NTEXT
   75                | NVOID

   76 atomicSimple: ANUM
   77             | ADEC
   78             | ABOOL
   79             | ALET
   80             | ATEXT

   81 nonAtomicArray: NARRNUM
   82               | NARRDEC
   83               | NARRBOOL
   84               | NARRLET
   85               | NARRTEXT

   86 atomicArray: AARRNUM
   87            | AARRDEC
   88            | AARRBOOL
   89            | AARRLET
   90            | AARRTEXT

   91 declaration: declarationStmt SEMICOLON

   92 simpleDatatype: nonAtomicSimple
   93               | atomicSimple
   94               | NUDATATYPE
   95               | ATOMIC AUDATATYPE

   96 arrayDatatype: nonAtomicArray
   97              | atomicArray
   98              | ARRAY NARRUDATATYPE
   99              | ATOMIC ARRAY AARRUDATATYPE

  100 declarationStmt: simpleDatatype simpleList
  101                | arrayDatatype arrayList

  102 simpleList: IDENTIFIER
  103           | simpleList COMMA IDENTIFIER
  104           | IDENTIFIER EQ RHS
  105           | simpleList COMMA IDENTIFIER EQ RHS

  106 arrayList: IDENTIFIER SQUAREOPEN dimlist SQUARECLOSE
  107          | arrayList COMMA IDENTIFIER SQUAREOPEN dimlist SQUARECLOSE
  108          | IDENTIFIER SQUAREOPEN dimlist SQUARECLOSE EQ RHS
  109          | arrayList COMMA IDENTIFIER SQUAREOPEN dimlist SQUARECLOSE EQ RHS

  110 array_inValues: INTEGERLITERAL
  111               | IDENTIFIER

  112 dimlist: dimlist COMMA array_inValues
  113        | array_inValues

  114 LHS: IDENTIFIER
  115    | IDENTIFIER SQUAREOPEN arr_access SQUARECLOSE
  116    | access

  117 arr_access: exprlist

  118 exprlist: arith_expr
  119         | exprlist COMMA arith_expr

  120 arith_operand: IDENTIFIER
  121              | INTEGERLITERAL
  122              | FLOATLITERAL
  123              | ROUNDOPEN arith_expr ROUNDCLOSE

  124 arith_expr: arith_expr arithmetic_op arith_operand
  125           | arith_operand

  126 assignment_statement: LHS EQ RHS

  127 expression_statement: LHS expression_op RHS

  128 exprrr: expression_statement
  129       | ROUNDOPEN expression_statement ROUNDCLOSE

  130 log: assignment_statement SEMICOLON
  131    | expression_statement SEMICOLON

  132 g: IDENTIFIER EQ RHS
  133  | g COMMA IDENTIFIER EQ RHS

  134 both_assignment: assignment_statement
  135                | ROUNDOPEN assignment_statement ROUNDCLOSE
  136                | simpleDatatype g

  137 loop: for_loop
  138     | while_loop

  139 $@1: ε

  140 for_loop: FOR SQUAREOPEN both_assignment PIPE RHS PIPE exprrr SQUARECLOSE $@1 SCOPEOPEN statements SCOPECLOSE

  141 $@2: ε

  142 while_loop: REPEAT SQUAREOPEN RHS SQUARECLOSE $@2 SCOPEOPEN statements SCOPECLOSE

  143 conditional: when_statement when_default

  144 $@3: ε

  145 when_statement: WHEN SQUAREOPEN RHS SQUARECLOSE $@3 SCOPEOPEN statements SCOPECLOSE

  146 $@4: ε

  147 when_statement: when_statement ELSE_WHEN SQUAREOPEN RHS SQUARECLOSE $@4 SCOPEOPEN statements SCOPECLOSE

  148 $@5: ε

  149 when_default: DEFAULT $@5 SCOPEOPEN statements SCOPECLOSE
  150             | ε

  151 analysis_arrays: NARRDEC
  152                | NARRNUM
  153                | AARRDEC
  154                | AARRNUM

  155 analyze_label: STRINGLITERAL
  156              | IDENTIFIER

  157 analyze_statement: ANALYZE analyze_label COLON analyze_label COLON analysis_arrays COLON analysis_arrays analyze_syntax SEMICOLON

  158 analyze_syntax: COLON analysis_arrays analyze_syntax
  159               | ε

  160 func_invoke2: func_invoke SEMICOLON

  161 func_invoke: INVOKE IDENTIFIER COLON arguments COLON
  162            | INVOKE IDENTIFIER COLON NULL_ARGS COLON

  163 arguments: arguments COMMA RHS
  164          | RHS

  165 task_invoke: MAKE_PARALLEL IDENTIFIER COLON arith_expr COLON arith_expr COLON arguments COLON SEMICOLON
  166            | MAKE_PARALLEL IDENTIFIER COLON arith_expr COLON arith_expr COLON NULL_ARGS COLON SEMICOLON

  167 get_invoke: GET ARROW TIME

  168 sleep: SLEEP ROUNDOPEN FLOATLITERAL ROUNDCLOSE SEMICOLON
  169      | SLEEP ROUNDOPEN INTEGERLITERAL ROUNDCLOSE SEMICOLON

  170 file_name: ARROW STRINGLITERAL
  171          | ARROW IDENTIFIER
  172          | ε

  173 input: IP file_name COLON IDENTIFIER nextip

  174 nextip: COMMA IDENTIFIER nextip
  175       | SEMICOLON

  176 stringvalues: STRINGLITERAL
  177             | IDENTIFIER

  178 return_statement: RETURN RHS SEMICOLON
  179                 | RETURN NVOID SEMICOLON

  180 output: OP COLON opstring file_name SEMICOLON

  181 opstring: stringvalues nextop

  182 nextop: HASH stringvalues nextop
  183       | ε

  184 function: func_decl func_body
  185         | atomic_func_decl func_body

  186 func_args: all_datatypes IDENTIFIER
  187          | func_args COMMA all_datatypes IDENTIFIER

  188 args: func_args
  189     | NULL_ARGS

  190 func_return: nonAtomic_datatypes
  191            | NUDATATYPE

  192 func_decl: FUNC IDENTIFIER COLON args COLON func_return

  193 atomic_func_decl: ATOMIC FUNC IDENTIFIER COLON args COLON func_return

  194 func_body: SCOPEOPEN func_statements SCOPECLOSE

  195 func_scope: declaration
  196           | log
  197           | task_invoke
  198           | func_invoke2
  199           | loop
  200           | return_statement
  201           | conditional
  202           | analyze_statement
  203           | input
  204           | output
  205           | sleep
  206           | SCOPEOPEN func_statements SCOPECLOSE
  207           | method_invoke2

  208 func_statements: func_scope func_statements
  209                | ε

  210 $@6: ε

  211 task: TASK IDENTIFIER COLON args $@6 SCOPEOPEN taskscope SCOPECLOSE

  212 taskscope: declaration taskscope
  213          | log taskscope
  214          | conditional taskscope
  215          | loop taskscope
  216          | func_invoke2 taskscope
  217          | output taskscope
  218          | SCOPEOPEN taskscope SCOPECLOSE taskscope
  219          | sleep taskscope
  220          | method_invoke2 taskscope
  221          | ε

  222 statement: declaration
  223          | log
  224          | conditional
  225          | loop
  226          | return_statement
  227          | func_invoke2
  228          | task_invoke
  229          | analyze_statement
  230          | output
  231          | sleep
  232          | BREAK SEMICOLON
  233          | CONTINUE SEMICOLON
  234          | input
  235          | method_invoke2

  236 statements: statement statements
  237           | ε

  238 access: IDENTIFIER ARROW id

  239 id: IDENTIFIER
  240   | id ARROW IDENTIFIER

  241 startdec: START SCOPEOPEN start SCOPECLOSE

  242 start: declaration start
  243      | log start
  244      | conditional start
  245      | loop start
  246      | func_invoke2 start
  247      | task_invoke start
  248      | analyze_statement start
  249      | output start
  250      | input start
  251      | SCOPEOPEN start SCOPECLOSE start
  252      | sleep start
  253      | method_invoke2 start
  254      | ε

  255 $@7: ε

  256 type_declaration: TYPE TYPENAME $@7 SCOPEOPEN type_scope methods SCOPECLOSE

  257 type_scope: declaration type_scope
  258           | ε

  259 methods: methods method
  260        | ε

  261 method: func_decl SCOPEOPEN method_body SCOPECLOSE

  262 method_invoke2: method_invoke SEMICOLON

  263 method_args: arguments
  264            | NULL_ARGS

  265 method_invoke: INVOKE IDENTIFIER ARROW IDENTIFIER COLON method_args COLON
  266              | INVOKE IDENTIFIER id ARROW IDENTIFIER COLON method_args COLON

  267 in_stmt: IN ARROW IDENTIFIER
  268        | INVOKE IN ARROW IDENTIFIER COLON arguments COLON
  269        | INVOKE IN ARROW IDENTIFIER COLON NULL_ARGS COLON

  270 method_statements: declaration
  271                  | log
  272                  | task_invoke
  273                  | func_invoke2
  274                  | loop
  275                  | return_statement
  276                  | conditional
  277                  | analyze_statement
  278                  | input
  279                  | output
  280                  | sleep
  281                  | SCOPEOPEN method_statements SCOPECLOSE
  282                  | method_invoke2

  283 method_body: method_statements method_body
  284            | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    WHEN (258) 145
    REPEAT (259) 142
    ELSE_WHEN (260) 147
    DEFAULT (261) 149
    FOR (262) 140
    BREAK (263) 232
    CONTINUE (264) 233
    TASK (265) 211
    MAKE_PARALLEL (266) 165 166
    NULL_ARGS (267) 162 166 189 264 269
    TID (268) 63
    ANALYZE (269) 157
    GET (270) 167
    SLEEP (271) 168 169
    TIME (272) 167
    START (273) 241
    RETURN (274) 178 179
    TYPE (275) 256
    ATOMIC (276) 95 99 193
    ARRAY (277) 98 99
    IN (278) 267 268 269
    FUNC (279) 192 193
    INVOKE (280) 161 162 265 266 268 269
    IP (281) 173
    OP (282) 180
    DIV (283) 32
    ADD (284) 29
    SUB (285) 30
    MUL (286) 31
    EXPONENT (287) 34
    MODULO (288) 33
    ARROW (289) 53 167 170 171 238 240 265 266 267 268 269
    EQ (290) 104 105 108 109 126 132 133
    INCR (291) 21
    DECR (292) 22
    ASSN_MODULO (293) 19
    ASSN_EXPONENT (294) 18
    ASSN_DIV (295) 17
    ASSN_MUL (296) 20
    AND (297) 35
    OR (298) 36
    GT (299) 24
    LT (300) 23
    GTEQ (301) 25
    LTEQ (302) 26
    NOT_EQ (303) 27
    NEG (304) 69
    EQUAL_TWO (305) 28
    INTEGERLITERAL (306) 54 110 121 169
    STRINGLITERAL (307) 58 155 170 176
    CHARACTERLITERAL (308) 55
    BOOLEANLITERAL (309) 57
    FLOATLITERAL (310) 56 122 168
    COMMA (311) 103 105 107 109 112 119 133 163 174 187
    SEMICOLON (312) 91 130 131 157 160 165 166 168 169 175 178 179 180 232 233 262
    COLON (313) 157 158 161 162 165 166 173 180 192 193 211 265 266 268 269
    PIPE (314) 140
    IDENTIFIER (315) 47 102 103 104 105 106 107 108 109 111 114 115 120 132 133 156 161 162 165 166 171 173 174 177 186 187 192 193 211 238 239 240 265 266 267 268 269
    SCOPEOPEN (316) 140 142 145 147 149 194 206 211 218 241 251 256 261 281
    SCOPECLOSE (317) 140 142 145 147 149 194 206 211 218 241 251 256 261 281
    ROUNDOPEN (318) 67 68 69 123 129 135 168 169
    ROUNDCLOSE (319) 67 68 69 123 129 135 168 169
    SQUAREOPEN (320) 46 106 107 108 109 115 140 142 145 147
    SQUARECLOSE (321) 46 106 107 108 109 115 140 142 145 147
    HASH (322) 52 182
    LEXERROR (323)
    NNUM (324) 7 70
    NDEC (325) 6 71
    NBOOL (326) 5 72
    NLET (327) 9 73
    NTEXT (328) 8 74
    NVOID (329) 75 179
    NARRNUM (330) 81 152
    NARRDEC (331) 82 151
    NARRBOOL (332) 83
    NARRLET (333) 84
    NARRTEXT (334) 85
    ANUM (335) 14 76
    ADEC (336) 11 77
    ABOOL (337) 10 78
    ALET (338) 12 79
    ATEXT (339) 13 80
    AARRNUM (340) 86 154
    AARRDEC (341) 87 153
    AARRBOOL (342) 88
    AARRLET (343) 89
    AARRTEXT (344) 90
    TYPENAME (345) 256
    NUDATATYPE (346) 1 94 191
    AUDATATYPE (347) 2 95
    NARRUDATATYPE (348) 3 98
    AARRUDATATYPE (349) 4 99


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    all_datatypes (96)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 186 187
    expression_op (97)
        on left: 17 18 19 20 21 22
        on right: 127
    comparison_op (98)
        on left: 23 24 25 26 27 28
        on right: 50
    arithmetic_op (99)
        on left: 29 30 31 32 33 34
        on right: 49 124
    logical_op (100)
        on left: 35 36
        on right: 51
    nonAtomic_datatypes (101)
        on left: 37 38
        on right: 190
    begin (102)
        on left: 39 40 41 42 43 44
        on right: 0 40 41 42 43 44
    E (103)
        on left: 45 46
        on right: 47
    T (104)
        on left: 47 48
        on right: 62
    all_ops (105)
        on left: 49 50 51 52 53
        on right: 59 67
    constants (106)
        on left: 54 55 56 57 58
        on right: 61
    next (107)
        on left: 59 60
        on right: 59 67
    RHS (108)
        on left: 61 62 63 64 65 66 67 68 69
        on right: 59 60 67 68 69 104 105 108 109 126 127 132 133 140 142 145 147 163 164 178
    nonAtomicSimple (109)
        on left: 70 71 72 73 74 75
        on right: 38 92
    atomicSimple (110)
        on left: 76 77 78 79 80
        on right: 93
    nonAtomicArray (111)
        on left: 81 82 83 84 85
        on right: 15 37 96
    atomicArray (112)
        on left: 86 87 88 89 90
        on right: 16 97
    declaration (113)
        on left: 91
        on right: 41 195 212 222 242 257 270
    simpleDatatype (114)
        on left: 92 93 94 95
        on right: 100 136
    arrayDatatype (115)
        on left: 96 97 98 99
        on right: 101
    declarationStmt (116)
        on left: 100 101
        on right: 91
    simpleList (117)
        on left: 102 103 104 105
        on right: 100 103 105
    arrayList (118)
        on left: 106 107 108 109
        on right: 101 107 109
    array_inValues (119)
        on left: 110 111
        on right: 112 113
    dimlist (120)
        on left: 112 113
        on right: 106 107 108 109 112
    LHS (121)
        on left: 114 115 116
        on right: 126 127
    arr_access (122)
        on left: 117
        on right: 46 115
    exprlist (123)
        on left: 118 119
        on right: 117 119
    arith_operand (124)
        on left: 120 121 122 123
        on right: 124 125
    arith_expr (125)
        on left: 124 125
        on right: 118 119 123 124 165 166
    assignment_statement (126)
        on left: 126
        on right: 130 134 135
    expression_statement (127)
        on left: 127
        on right: 128 129 131
    exprrr (128)
        on left: 128 129
        on right: 140
    log (129)
        on left: 130 131
        on right: 196 213 223 243 271
    g (130)
        on left: 132 133
        on right: 133 136
    both_assignment (131)
        on left: 134 135 136
        on right: 140
    loop (132)
        on left: 137 138
        on right: 199 215 225 245 274
    for_loop (133)
        on left: 140
        on right: 137
    $@1 (134)
        on left: 139
        on right: 140
    while_loop (135)
        on left: 142
        on right: 138
    $@2 (136)
        on left: 141
        on right: 142
    conditional (137)
        on left: 143
        on right: 201 214 224 244 276
    when_statement (138)
        on left: 145 147
        on right: 143 147
    $@3 (139)
        on left: 144
        on right: 145
    $@4 (140)
        on left: 146
        on right: 147
    when_default (141)
        on left: 149 150
        on right: 143
    $@5 (142)
        on left: 148
        on right: 149
    analysis_arrays (143)
        on left: 151 152 153 154
        on right: 157 158
    analyze_label (144)
        on left: 155 156
        on right: 157
    analyze_statement (145)
        on left: 157
        on right: 202 229 248 277
    analyze_syntax (146)
        on left: 158 159
        on right: 157 158
    func_invoke2 (147)
        on left: 160
        on right: 198 216 227 246 273
    func_invoke (148)
        on left: 161 162
        on right: 48 160
    arguments (149)
        on left: 163 164
        on right: 161 163 165 263 268
    task_invoke (150)
        on left: 165 166
        on right: 197 228 247 272
    get_invoke (151)
        on left: 167
        on right: 64
    sleep (152)
        on left: 168 169
        on right: 205 219 231 252 280
    file_name (153)
        on left: 170 171 172
        on right: 173 180
    input (154)
        on left: 173
        on right: 203 234 250 278
    nextip (155)
        on left: 174 175
        on right: 173 174
    stringvalues (156)
        on left: 176 177
        on right: 181 182
    return_statement (157)
        on left: 178 179
        on right: 200 226 275
    output (158)
        on left: 180
        on right: 204 217 230 249 279
    opstring (159)
        on left: 181
        on right: 180
    nextop (160)
        on left: 182 183
        on right: 181 182
    function (161)
        on left: 184 185
        on right: 42
    func_args (162)
        on left: 186 187
        on right: 187 188
    args (163)
        on left: 188 189
        on right: 192 193 211
    func_return (164)
        on left: 190 191
        on right: 192 193
    func_decl (165)
        on left: 192
        on right: 184 261
    atomic_func_decl (166)
        on left: 193
        on right: 185
    func_body (167)
        on left: 194
        on right: 184 185
    func_scope (168)
        on left: 195 196 197 198 199 200 201 202 203 204 205 206 207
        on right: 208
    func_statements (169)
        on left: 208 209
        on right: 194 206 208
    task (170)
        on left: 211
        on right: 43
    $@6 (171)
        on left: 210
        on right: 211
    taskscope (172)
        on left: 212 213 214 215 216 217 218 219 220 221
        on right: 211 212 213 214 215 216 217 218 219 220
    statement (173)
        on left: 222 223 224 225 226 227 228 229 230 231 232 233 234 235
        on right: 236
    statements (174)
        on left: 236 237
        on right: 140 142 145 147 149 236
    access (175)
        on left: 238
        on right: 116
    id (176)
        on left: 239 240
        on right: 238 240 266
    startdec (177)
        on left: 241
        on right: 40
    start (178)
        on left: 242 243 244 245 246 247 248 249 250 251 252 253 254
        on right: 241 242 243 244 245 246 247 248 249 250 251 252 253
    type_declaration (179)
        on left: 256
        on right: 44
    $@7 (180)
        on left: 255
        on right: 256
    type_scope (181)
        on left: 257 258
        on right: 256 257
    methods (182)
        on left: 259 260
        on right: 256 259
    method (183)
        on left: 261
        on right: 259
    method_invoke2 (184)
        on left: 262
        on right: 207 220 235 253 282
    method_args (185)
        on left: 263 264
        on right: 265 266
    method_invoke (186)
        on left: 265 266
        on right: 65 262
    in_stmt (187)
        on left: 267 268 269
        on right: 66
    method_statements (188)
        on left: 270 271 272 273 274 275 276 277 278 279 280 281 282
        on right: 281 283
    method_body (189)
        on left: 283 284
        on right: 261 283


State 0

    0 $accept: • begin $end

    TASK        shift, and go to state 1
    START       shift, and go to state 2
    TYPE        shift, and go to state 3
    ATOMIC      shift, and go to state 4
    ARRAY       shift, and go to state 5
    FUNC        shift, and go to state 6
    NNUM        shift, and go to state 7
    NDEC        shift, and go to state 8
    NBOOL       shift, and go to state 9
    NLET        shift, and go to state 10
    NTEXT       shift, and go to state 11
    NVOID       shift, and go to state 12
    NARRNUM     shift, and go to state 13
    NARRDEC     shift, and go to state 14
    NARRBOOL    shift, and go to state 15
    NARRLET     shift, and go to state 16
    NARRTEXT    shift, and go to state 17
    ANUM        shift, and go to state 18
    ADEC        shift, and go to state 19
    ABOOL       shift, and go to state 20
    ALET        shift, and go to state 21
    ATEXT       shift, and go to state 22
    AARRNUM     shift, and go to state 23
    AARRDEC     shift, and go to state 24
    AARRBOOL    shift, and go to state 25
    AARRLET     shift, and go to state 26
    AARRTEXT    shift, and go to state 27
    NUDATATYPE  shift, and go to state 28

    $default  reduce using rule 39 (begin)

    begin             go to state 29
    nonAtomicSimple   go to state 30
    atomicSimple      go to state 31
    nonAtomicArray    go to state 32
    atomicArray       go to state 33
    declaration       go to state 34
    simpleDatatype    go to state 35
    arrayDatatype     go to state 36
    declarationStmt   go to state 37
    function          go to state 38
    func_decl         go to state 39
    atomic_func_decl  go to state 40
    task              go to state 41
    startdec          go to state 42
    type_declaration  go to state 43


State 1

  211 task: TASK • IDENTIFIER COLON args $@6 SCOPEOPEN taskscope SCOPECLOSE

    IDENTIFIER  shift, and go to state 44


State 2

  241 startdec: START • SCOPEOPEN start SCOPECLOSE

    SCOPEOPEN  shift, and go to state 45


State 3

  256 type_declaration: TYPE • TYPENAME $@7 SCOPEOPEN type_scope methods SCOPECLOSE

    TYPENAME  shift, and go to state 46


State 4

   95 simpleDatatype: ATOMIC • AUDATATYPE
   99 arrayDatatype: ATOMIC • ARRAY AARRUDATATYPE
  193 atomic_func_decl: ATOMIC • FUNC IDENTIFIER COLON args COLON func_return

    ARRAY       shift, and go to state 47
    FUNC        shift, and go to state 48
    AUDATATYPE  shift, and go to state 49


State 5

   98 arrayDatatype: ARRAY • NARRUDATATYPE

    NARRUDATATYPE  shift, and go to state 50


State 6

  192 func_decl: FUNC • IDENTIFIER COLON args COLON func_return

    IDENTIFIER  shift, and go to state 51


State 7

   70 nonAtomicSimple: NNUM •

    $default  reduce using rule 70 (nonAtomicSimple)


State 8

   71 nonAtomicSimple: NDEC •

    $default  reduce using rule 71 (nonAtomicSimple)


State 9

   72 nonAtomicSimple: NBOOL •

    $default  reduce using rule 72 (nonAtomicSimple)


State 10

   73 nonAtomicSimple: NLET •

    $default  reduce using rule 73 (nonAtomicSimple)


State 11

   74 nonAtomicSimple: NTEXT •

    $default  reduce using rule 74 (nonAtomicSimple)


State 12

   75 nonAtomicSimple: NVOID •

    $default  reduce using rule 75 (nonAtomicSimple)


State 13

   81 nonAtomicArray: NARRNUM •

    $default  reduce using rule 81 (nonAtomicArray)


State 14

   82 nonAtomicArray: NARRDEC •

    $default  reduce using rule 82 (nonAtomicArray)


State 15

   83 nonAtomicArray: NARRBOOL •

    $default  reduce using rule 83 (nonAtomicArray)


State 16

   84 nonAtomicArray: NARRLET •

    $default  reduce using rule 84 (nonAtomicArray)


State 17

   85 nonAtomicArray: NARRTEXT •

    $default  reduce using rule 85 (nonAtomicArray)


State 18

   76 atomicSimple: ANUM •

    $default  reduce using rule 76 (atomicSimple)


State 19

   77 atomicSimple: ADEC •

    $default  reduce using rule 77 (atomicSimple)


State 20

   78 atomicSimple: ABOOL •

    $default  reduce using rule 78 (atomicSimple)


State 21

   79 atomicSimple: ALET •

    $default  reduce using rule 79 (atomicSimple)


State 22

   80 atomicSimple: ATEXT •

    $default  reduce using rule 80 (atomicSimple)


State 23

   86 atomicArray: AARRNUM •

    $default  reduce using rule 86 (atomicArray)


State 24

   87 atomicArray: AARRDEC •

    $default  reduce using rule 87 (atomicArray)


State 25

   88 atomicArray: AARRBOOL •

    $default  reduce using rule 88 (atomicArray)


State 26

   89 atomicArray: AARRLET •

    $default  reduce using rule 89 (atomicArray)


State 27

   90 atomicArray: AARRTEXT •

    $default  reduce using rule 90 (atomicArray)


State 28

   94 simpleDatatype: NUDATATYPE •

    $default  reduce using rule 94 (simpleDatatype)


State 29

    0 $accept: begin • $end

    $end  shift, and go to state 52


State 30

   92 simpleDatatype: nonAtomicSimple •

    $default  reduce using rule 92 (simpleDatatype)


State 31

   93 simpleDatatype: atomicSimple •

    $default  reduce using rule 93 (simpleDatatype)


State 32

   96 arrayDatatype: nonAtomicArray •

    $default  reduce using rule 96 (arrayDatatype)


State 33

   97 arrayDatatype: atomicArray •

    $default  reduce using rule 97 (arrayDatatype)


State 34

   41 begin: declaration • begin

    TASK        shift, and go to state 1
    START       shift, and go to state 2
    TYPE        shift, and go to state 3
    ATOMIC      shift, and go to state 4
    ARRAY       shift, and go to state 5
    FUNC        shift, and go to state 6
    NNUM        shift, and go to state 7
    NDEC        shift, and go to state 8
    NBOOL       shift, and go to state 9
    NLET        shift, and go to state 10
    NTEXT       shift, and go to state 11
    NVOID       shift, and go to state 12
    NARRNUM     shift, and go to state 13
    NARRDEC     shift, and go to state 14
    NARRBOOL    shift, and go to state 15
    NARRLET     shift, and go to state 16
    NARRTEXT    shift, and go to state 17
    ANUM        shift, and go to state 18
    ADEC        shift, and go to state 19
    ABOOL       shift, and go to state 20
    ALET        shift, and go to state 21
    ATEXT       shift, and go to state 22
    AARRNUM     shift, and go to state 23
    AARRDEC     shift, and go to state 24
    AARRBOOL    shift, and go to state 25
    AARRLET     shift, and go to state 26
    AARRTEXT    shift, and go to state 27
    NUDATATYPE  shift, and go to state 28

    $default  reduce using rule 39 (begin)

    begin             go to state 53
    nonAtomicSimple   go to state 30
    atomicSimple      go to state 31
    nonAtomicArray    go to state 32
    atomicArray       go to state 33
    declaration       go to state 34
    simpleDatatype    go to state 35
    arrayDatatype     go to state 36
    declarationStmt   go to state 37
    function          go to state 38
    func_decl         go to state 39
    atomic_func_decl  go to state 40
    task              go to state 41
    startdec          go to state 42
    type_declaration  go to state 43


State 35

  100 declarationStmt: simpleDatatype • simpleList

    IDENTIFIER  shift, and go to state 54

    simpleList  go to state 55


State 36

  101 declarationStmt: arrayDatatype • arrayList

    IDENTIFIER  shift, and go to state 56

    arrayList  go to state 57


State 37

   91 declaration: declarationStmt • SEMICOLON

    SEMICOLON  shift, and go to state 58


State 38

   42 begin: function • begin

    TASK        shift, and go to state 1
    START       shift, and go to state 2
    TYPE        shift, and go to state 3
    ATOMIC      shift, and go to state 4
    ARRAY       shift, and go to state 5
    FUNC        shift, and go to state 6
    NNUM        shift, and go to state 7
    NDEC        shift, and go to state 8
    NBOOL       shift, and go to state 9
    NLET        shift, and go to state 10
    NTEXT       shift, and go to state 11
    NVOID       shift, and go to state 12
    NARRNUM     shift, and go to state 13
    NARRDEC     shift, and go to state 14
    NARRBOOL    shift, and go to state 15
    NARRLET     shift, and go to state 16
    NARRTEXT    shift, and go to state 17
    ANUM        shift, and go to state 18
    ADEC        shift, and go to state 19
    ABOOL       shift, and go to state 20
    ALET        shift, and go to state 21
    ATEXT       shift, and go to state 22
    AARRNUM     shift, and go to state 23
    AARRDEC     shift, and go to state 24
    AARRBOOL    shift, and go to state 25
    AARRLET     shift, and go to state 26
    AARRTEXT    shift, and go to state 27
    NUDATATYPE  shift, and go to state 28

    $default  reduce using rule 39 (begin)

    begin             go to state 59
    nonAtomicSimple   go to state 30
    atomicSimple      go to state 31
    nonAtomicArray    go to state 32
    atomicArray       go to state 33
    declaration       go to state 34
    simpleDatatype    go to state 35
    arrayDatatype     go to state 36
    declarationStmt   go to state 37
    function          go to state 38
    func_decl         go to state 39
    atomic_func_decl  go to state 40
    task              go to state 41
    startdec          go to state 42
    type_declaration  go to state 43


State 39

  184 function: func_decl • func_body

    SCOPEOPEN  shift, and go to state 60

    func_body  go to state 61


State 40

  185 function: atomic_func_decl • func_body

    SCOPEOPEN  shift, and go to state 60

    func_body  go to state 62


State 41

   43 begin: task • begin

    TASK        shift, and go to state 1
    START       shift, and go to state 2
    TYPE        shift, and go to state 3
    ATOMIC      shift, and go to state 4
    ARRAY       shift, and go to state 5
    FUNC        shift, and go to state 6
    NNUM        shift, and go to state 7
    NDEC        shift, and go to state 8
    NBOOL       shift, and go to state 9
    NLET        shift, and go to state 10
    NTEXT       shift, and go to state 11
    NVOID       shift, and go to state 12
    NARRNUM     shift, and go to state 13
    NARRDEC     shift, and go to state 14
    NARRBOOL    shift, and go to state 15
    NARRLET     shift, and go to state 16
    NARRTEXT    shift, and go to state 17
    ANUM        shift, and go to state 18
    ADEC        shift, and go to state 19
    ABOOL       shift, and go to state 20
    ALET        shift, and go to state 21
    ATEXT       shift, and go to state 22
    AARRNUM     shift, and go to state 23
    AARRDEC     shift, and go to state 24
    AARRBOOL    shift, and go to state 25
    AARRLET     shift, and go to state 26
    AARRTEXT    shift, and go to state 27
    NUDATATYPE  shift, and go to state 28

    $default  reduce using rule 39 (begin)

    begin             go to state 63
    nonAtomicSimple   go to state 30
    atomicSimple      go to state 31
    nonAtomicArray    go to state 32
    atomicArray       go to state 33
    declaration       go to state 34
    simpleDatatype    go to state 35
    arrayDatatype     go to state 36
    declarationStmt   go to state 37
    function          go to state 38
    func_decl         go to state 39
    atomic_func_decl  go to state 40
    task              go to state 41
    startdec          go to state 42
    type_declaration  go to state 43


State 42

   40 begin: startdec • begin

    TASK        shift, and go to state 1
    START       shift, and go to state 2
    TYPE        shift, and go to state 3
    ATOMIC      shift, and go to state 4
    ARRAY       shift, and go to state 5
    FUNC        shift, and go to state 6
    NNUM        shift, and go to state 7
    NDEC        shift, and go to state 8
    NBOOL       shift, and go to state 9
    NLET        shift, and go to state 10
    NTEXT       shift, and go to state 11
    NVOID       shift, and go to state 12
    NARRNUM     shift, and go to state 13
    NARRDEC     shift, and go to state 14
    NARRBOOL    shift, and go to state 15
    NARRLET     shift, and go to state 16
    NARRTEXT    shift, and go to state 17
    ANUM        shift, and go to state 18
    ADEC        shift, and go to state 19
    ABOOL       shift, and go to state 20
    ALET        shift, and go to state 21
    ATEXT       shift, and go to state 22
    AARRNUM     shift, and go to state 23
    AARRDEC     shift, and go to state 24
    AARRBOOL    shift, and go to state 25
    AARRLET     shift, and go to state 26
    AARRTEXT    shift, and go to state 27
    NUDATATYPE  shift, and go to state 28

    $default  reduce using rule 39 (begin)

    begin             go to state 64
    nonAtomicSimple   go to state 30
    atomicSimple      go to state 31
    nonAtomicArray    go to state 32
    atomicArray       go to state 33
    declaration       go to state 34
    simpleDatatype    go to state 35
    arrayDatatype     go to state 36
    declarationStmt   go to state 37
    function          go to state 38
    func_decl         go to state 39
    atomic_func_decl  go to state 40
    task              go to state 41
    startdec          go to state 42
    type_declaration  go to state 43


State 43

   44 begin: type_declaration • begin
